--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,245 @@
 body {
-    background: grey;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+    background-image: url('../images/cork-wallet.png');
+    width: 100%;
+    margin: auto;
 }
 .container {
-    width: 960px;
-    margin: 0 auto;
+    width:960px;
+}
+#wrapper {
+  position: relative;
+  margin: auto;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -100px;
 }
 .header {
-    width: 100%;
-    height: 100px;
-    background: white;
     top: 0;
-    position: fixed;
+    background: white;
     border-bottom: 1px solid #cccccc;
-    z-index: 10000;
+    height:78px;
 }
 .name {
-    height: 100px;
+    float: left;
+    font-family: 'Georgia', Times, Times New Roman, serif;
     padding-left: 30px;
     padding-right: 30px;
-    float: left;
+    margin-left: 30px;
     color: White;
     background: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+li {
+    list-style: none;
+    float:left;
+    padding-top: 15px;
+}
+.nav {
+float:right;
+margin: auto;
 }
 a {
     text-decoration: none;
     color: #777777;
+    padding: .2em 1em;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-li {
-    list-style: none;
-    float: left;
-    margin-left: 20px;
-    padding-top: 15px;
+.aboutme{
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: #4aaaa5;
+  border-bottom: 3px solid #cccccc;
+  margin-left: 25px;
+  width: 600px;
+  margin-top: 15px;
+  position: relative;
+  float: left;
 }
-.nav {
-    float: right;
+.Main {
+  width:650px;
+  background-color: white;
+  margin-left: 10px;
+  margin-top: 40px;
+  margin-bottom:40px;
+  float:left;
+  border: 2px solid #dddddd;
+  color: #777777;
 }
+.Body {
+  width:960px;
+}
+.subject {
+  width: 600px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+  margin-left: 25px;
+  margin-top: 80px;
+  padding-top: 35px;
+}
+.entername{
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+  width:595px;
+  height: 30px;
+  font-size: 16px;
+  margin-top: -15px;
+}
+.enteremail{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    width:595px;
+    height: 30px;
+    font-size: 16px;
+    margin-top: -15px;
+}
+.entermessage{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    width:595px;
+    height: 200px;
+    font-size: 16px;
+    margin-top: -15px;
+}
+.me{
+float:left;
+width:242px;
+height:242px;
+margin: 12px;
+padding-top: 15px;
+}
+.portfolio{
+  float:left;
+  width:625px;
+  margin-bottom: 25px;
+}
+.image{position: relative;
+margin-top: 25px;
+margin-right: 50px;
+}
+.hangtext{
+  position: absolute;
+  text-align: center;
+  top: 390px;
+  height: 47px;
+  width: 260px;
+  left:0;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  margin-left: 37px;
+  font-size: 25px;
+  padding-top: 10px;
+  color: White;
+  background: #4aaaa5;
+}
+.rpgtext{
+  position: absolute;
+  text-align: center;
+  top: 390px;
+  left:0;
+  height: 47px;
+  width: 260px;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  padding-top:10px;
+  font-size: 25px;
+  margin-left: 351px;
+  color: White;
+  background: #4aaaa5;
+}
+.triviatext{
+  position: absolute;
+  text-align: center;
+  top: 615px;
+  height: 47px;
+  width: 260px;
+  left:0;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  margin-left: 37px;
+  font-size: 25px;
+  padding-top: 10px;
+  color: White;
+  background: #4aaaa5;
+}
+.rutgerstext{
+  position: absolute;
+  text-align: center;
+  top: 615px;
+  height: 47px;
+  width: 260px;
+  left:0;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  margin-left: 351px;
+  font-size: 25px;
+  padding-top: 10px;
+  color: White;
+  background: #4aaaa5;
+}
+.RPStext{
+  position: absolute;
+  text-align: center;
+  top: 836px;
+  height: 47px;
+  width: 260px;
+  left:0;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  margin-left: 37px;
+  font-size: 25px;
+  padding-top: 10px;
+  color: White;
+  background: #4aaaa5;
+}
+.imgtxt{
+  position: relative;
+}
+p{
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color:#777777;
+  width:600px;
+  line-height: 35px;
+  font-size: 20px;
+}
+.connectme {
+  font-family: 'Georgia', Times, Times New Roman, serif;
+    text-align: center;
+    color: #4aaaa5;
+    border-bottom: 2px solid #cccccc;
+    width:200px;
+    margin-top: 10px;
+    margin-left: 35px;
+}
+.side{
+  float:right;
+  width:270px;
+  background-color: white;
+  margin-top: 40px;
+  border: 2px solid #dddddd;
+  padding-bottom: 20px;
+}
+.submit{
+  text-align: center;
+  height: 38px;
+  width: 111px;
+  left:0;
+  float: left;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 20px;
+  color: White;
+  background: #4aaaa5;
+  border:none;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
 .footer {
     width: 100%;
     font-size: 12;
     background: #666666;
     bottom: 0;
-    position: fixed;
+    position: relative;
     border-top: 6px solid #4aaaa5;
+    clear:both;
 }
 .copyright {
     height: 50px;
@@ -54,34 +248,8 @@ li {
     font-family: 'arial';
     font-weight: normal;
 }
-h4 {
-    font-weight: normal;
-    font-size: 12px;
-    padding-top: 10px;
-}
-h1 {
-    font-weight: normal;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    vertical-align: middle;
-}
-h2 {
-    color: #4aaaa5;
-}
-.aboutme {
-    background: white;
-    width: 650px;
-    margin-left: 10px;
-    position: relative;
-    float: left;
-    margin-bottom: 120px;
-    margin-top: 120px;
-}
-.connectme {
-    text-align: center;
-    color: #4aaaa5;
-    width: 270px;
-    background: white;
-    float: right;
-    margin-top: 120px;
-    position: relative;
+h4{
+  font-size: 12px;
+  margin-top: 35px;
+  font-weight: normal;
 }
